<resources>
    <string name="app_name">SCHEDULER v2.0</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LogIn</string>
    <string name="action_sign_in_short">LogIn</string>
    <string name="account_title">Account</string>
    <string name="schedule_title">Schedule</string>
    <string name="settings_title">Settings</string>
    <string name="btn_account">Account</string>
    <string name="btn_schedule">Schedule</string>
    <string name="btn_settings">Settings</string>
    <string name="tit_studentid">Student ID</string>
    <string name="tit_faculty">Faculty</string>
    <string name="tit_specialty">Specialty</string>
    <string name="tit_group">Group</string>
    <string name="tit_term">Term</string>
    <string name="tit_form_of_study">Form of Education</string>
    <string name="tit_term_of_study">Term of Education</string>
    <string name="tit_email">E-Mail</string>
    <string name="tit_theme_color">Theme color</string>
    <string name="tit_language">Language</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="uk">Ukrainian</string>
    <string name="en">English</string>
    <string name="calendar_title">Calendar</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>