<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/txtvThemeColTit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/namu"
        android:text="@string/tit_theme_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdgrTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtvThemeColTit"
        tools:layout_editor_absoluteX="178dp">

        <RadioButton
            android:id="@+id/rbtnDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namu"
            android:checked="false"
            android:text="@string/theme_dark" />

        <RadioButton
            android:id="@+id/rbtnLight"
            android:layout_width="match_parent"
            android:fontFamily="@font/namu"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/theme_light" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtvLanguageTit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/namu"
        android:text="@string/tit_language"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgrTheme" />


    <RadioGroup
        android:id="@+id/rdgrLng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtvLanguageTit"
        tools:layout_editor_absoluteX="178dp">

        <RadioButton
            android:id="@+id/rbtnLang1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namu"
            android:checked="false"
            android:text="@string/uk" />

        <RadioButton
            android:id="@+id/rbtnLang2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namu"
            android:checked="false"
            android:text="@string/en" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>